# generic_top_gen

./: CMakeLists.txt  README.md  commandline_parser.cpp  commandline_parser.h  file_handler.cpp  file_handler.h  generic_topo_gen.cpp  generic_topo_gen.h  main.cpp  sample_commandlines.txt
docs/: Algorithm for random topology generator.docx
input/: amazon0601_cube_comm_hash_part_256.txt  as-skitter_cube_comm_hash_part_512.txt  inp1.txt  inp2.txt  sample.txt
src/: Link.cpp  Link.h  Node.cpp  Node.h  Optimizer.cpp  Optimizer.h  Topology.cpp  Topology.h  commandline_parser.cpp  commandline_parser.h  file_handler.cpp  file_handler.h  generic_topo_gen.cpp  generic_topo_gen.h  main.cpp
